--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mohammed Khan Muntasir
-logo: /assets/img/headshot_circle.png
+logo: WhatsApp Image 2024-01-04 at 2.29.33 AM.jpeg
 #description: PORTFOLIO
 show_downloads: true
 theme: jekyll-theme-minimal
